--- a/src/editwindow.ui
+++ b/src/editwindow.ui
@@ -9,12 +9,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>314</width>
-    <height>166</height>
+    <width>338</width>
+    <height>186</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Edit</string>
+  </property>
+  <property name="modal">
+   <bool>true</bool>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -26,8 +35,11 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="programLocationEdit"/>
+     <item row="6" column="1">
+      <widget class="QLineEdit" name="noteEdit"/>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="nameEdit"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="nameLabel">
@@ -42,29 +54,7 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
-      <widget class="QLineEdit" name="noteEdit"/>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLineEdit" name="licenseLocationEdit"/>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="programLocationLabel">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string>Program Location</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="nameEdit"/>
-     </item>
-     <item row="4" column="0">
+     <item row="6" column="0">
       <widget class="QLabel" name="noteLabel">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -90,7 +80,48 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
+     <item row="2" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_1">
+       <item>
+        <widget class="QLineEdit" name="programLocationEdit"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="programLocationButton">
+         <property name="text">
+          <string>Select</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="programLocationLabel">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>Program Location</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <item>
+        <widget class="QLineEdit" name="licenseLocationEdit"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="licenseLocationButton">
+         <property name="text">
+          <string>Select</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="4" column="0">
       <widget class="QLabel" name="licenseLocationLabal">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
